src/types/tests/snapshots/tgbot__types__tests__payment__star_transaction-2.snap
---
source: src/types/tests/payment.rs
expression: expected_struct
---
{
  "amount": 10,
  "date": 0,
  "id": "tx-id",
  "nanostar_amount": 233,
  "source": {
    "type": "other"
  },
  "receiver": {
    "type": "other"
  }
}
