src/types/tests/snapshots/tgbot__types__tests__payment__star_transaction.snap
---
source: src/types/tests/payment.rs
expression: expected_struct.clone()
---
{
  "amount": 10,
  "date": 0,
  "id": "tx-id"
}
