src/types/tests/snapshots/tgbot__types__tests__payment__star_transactions.snap
---
source: src/types/tests/payment.rs
expression: "StarTransactions::from(vec![StarTransaction::new(10, 0, \"tx-id\")])"
---
{
  "transactions": [
    {
      "amount": 10,
      "date": 0,
      "id": "tx-id"
    }
  ]
}
