src/types/tests/snapshots/tgbot__types__tests__payment__successful_payment-2.snap
---
source: src/types/tests/payment.rs
expression: expected_struct
---
{
  "currency": "RUB",
  "invoice_payload": "invoice payload",
  "provider_payment_charge_id": "provider-charge-id",
  "telegram_payment_charge_id": "tg-charge-id",
  "total_amount": 145
}
