src/types/tests/snapshots/tgbot__types__tests__payment__transaction_partner-10.snap
---
source: src/types/tests/payment.rs
expression: "TransactionPartner::User(TransactionPartnerUserParameters::new(TransactionPartnerUserType::PaidMediaPayment,\nUser::new(1, \"John\", false),))"
---
{
  "type": "user",
  "transaction_type": "paid_media_payment",
  "user": {
    "first_name": "John",
    "id": 1,
    "is_bot": false
  }
}
