src/types/tests/snapshots/tgbot__types__tests__payment__transaction_partner-3.snap
---
source: src/types/tests/payment.rs
expression: "TransactionPartner::Chat(TransactionPartnerChatParameters::new(PrivateChat::new(1,\n\"test\")))"
---
{
  "type": "chat",
  "chat": {
    "type": "private",
    "id": 1,
    "first_name": "test"
  }
}
