src/types/tests/snapshots/tgbot__types__tests__payment__transaction_partner-4.snap
---
source: src/types/tests/payment.rs
expression: "TransactionPartner::Chat(TransactionPartnerChatParameters::new(PrivateChat::new(1,\n\"test\")).with_gift(Gift::new(\"gift-id\",\nSticker::new(\"file-id\", \"file-unique-id\", StickerType::Mask, 512, 512), 2,)),)"
---
{
  "type": "chat",
  "chat": {
    "type": "private",
    "id": 1,
    "first_name": "test"
  },
  "gift": {
    "id": "gift-id",
    "star_count": 2,
    "sticker": {
      "file_id": "file-id",
      "file_unique_id": "file-unique-id",
      "height": 512,
      "is_animated": false,
      "is_video": false,
      "type": "mask",
      "width": 512
    }
  }
}
