src/types/tests/snapshots/tgbot__types__tests__payment__transaction_partner-5.snap
---
source: src/types/tests/payment.rs
expression: "TransactionPartner::Fragment(None)"
---
{
  "type": "fragment"
}
